# Tecnicas-de-Programacao

./: Aluno.cpp  Aluno.hpp  Conhecimento.cpp  Conhecimento.hpp  Departamento.cpp  Departamento.hpp  Disciplina.cpp  Disciplina.hpp  ElAluno.cpp  ElAluno.hpp  ElDepartamento.cpp  ElDepartamento.hpp  ElDisciplina.cpp  ElDisciplina.hpp  ElProfessor.cpp  ElProfessor.hpp  ElUniversidade.cpp  ElUniversidade.hpp  Elemento.hpp  Estagiario.cpp  Estagiario.hpp  Lista.hpp  ListaAlunos.cpp  ListaAlunos.hpp  ListaAlunosGravadora.cpp  ListaAlunosGravadora.hpp  ListaDepartGravadora.cpp  ListaDepartGravadora.hpp  ListaDepartamentos.cpp  ListaDepartamentos.hpp  ListaDisciplinas.cpp  ListaDisciplinas.hpp  ListaDisciplinasGravadora.cpp  ListaDisciplinasGravadora.hpp  ListaPessoas.cpp  ListaPessoas.hpp  ListaProfessores.cpp  ListaProfessores.hpp  ListaProfessoresGravadora.cpp  ListaProfessoresGravadora.hpp  (+19 more)
Diagramas_Classes/: sistemaAcademico.mdj
builddir/: .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
