project('Sistema Academico', 'cpp')

src = ['main.cpp','Menu.cpp','ListaProfessores.cpp','ElProfessor.cpp','ListaUniversidades.cpp','ElUniversidade.cpp', 'Aluno.cpp', 'Departamento.cpp', 'Disciplina.cpp', 'ElAluno.cpp', 'ElDepartamento.cpp', 'ElDisciplina.cpp', 'ListaAlunos.cpp', 'ListaDepartamentos.cpp', 'ListaDisciplinas.cpp', 'Nota.cpp', 'Pessoa.cpp', 'Principal.cpp', 'Professor.cpp', 'Universidade.cpp']

executable('exe', sources:src)