project('Sistema Academico', 'cpp')

src = ['main.cpp','Menu.cpp','Conhecimento.cpp','Estagiario.cpp','ListaPessoas.cpp','ListaProfessoresGravadora.cpp','ListaAlunosGravadora.cpp','ListaDisciplinasGravadora.cpp','ListaUnivGravadora.cpp','ListaDepartGravadora.cpp','ListaProfessores.cpp','ListaUniversidades.cpp','Aluno.cpp', 'Departamento.cpp', 'Disciplina.cpp', 'ListaAlunos.cpp', 'ListaDepartamentos.cpp', 'ListaDisciplinas.cpp', 'Nota.cpp', 'Pessoa.cpp', 'Principal.cpp', 'Professor.cpp', 'Universidade.cpp']

executable('exe', sources:src)